// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List /> snapshots renders anchor list correctly 1`] = `
<div
  class="🅲-list"
>
  <a
    class="🅲-list-item"
    href="#"
  >
    Item 1
  </a>
  <a
    class="🅲-list-item"
    href="#"
  >
    Item 2
  </a>
</div>
`;

exports[`<List /> snapshots renders button list correctly 1`] = `
<div
  class="🅲-list"
>
  <button
    class="🅲-list-item"
  >
    Item 1
  </button>
  <button
    class="🅲-list-item"
  >
    Item 2
  </button>
</div>
`;

exports[`<List /> snapshots renders ul list correctly 1`] = `
<div
  class="🅲-list"
>
  <button
    class="🅲-list-item"
  >
    Item 1
  </button>
  <button
    class="🅲-list-item"
  >
    Item 2
  </button>
</div>
`;
